# dynarmic

./: .gitmodules  CMakeLists.txt  README.md
CMakeModules/: dynarmicConfig.cmake.in
CMakeModules/impl/: TargetArchitectureSpecificSourcesWrapFile.cmake
src/dynarmic/: CMakeLists.txt
src/dynarmic/backend/: block_range_information.cpp  block_range_information.h  exception_handler.h  exception_handler_macos.cpp  exception_handler_macos_mig.c  exception_handler_posix.cpp  exception_handler_windows.cpp
src/dynarmic/backend/arm64/: a32_interface.cpp  a32_jitstate.cpp  a64_interface.cpp  abi.cpp  abi.h  address_space.cpp  address_space.h  devirtualize.h  emit_arm64.h  emit_arm64_a32.cpp  emit_arm64_vector.cpp  emit_arm64_vector_floating_point.cpp  emit_arm64_vector_saturation.cpp  fastmem.h  reg_alloc.cpp  reg_alloc.h
src/dynarmic/backend/riscv64/: a32_address_space.cpp  a32_address_space.h  a32_interface.cpp  a32_jitstate.cpp  code_block.h  emit_riscv64.cpp  reg_alloc.cpp  reg_alloc.h
src/dynarmic/backend/x64/: a32_emit_x64.cpp  a32_emit_x64.h  a32_emit_x64_memory.cpp  a32_interface.cpp  a32_jitstate.cpp  a64_emit_x64.cpp  a64_emit_x64.h  a64_emit_x64_memory.cpp  a64_interface.cpp  a64_jitstate.cpp  block_of_code.cpp  block_of_code.h  constant_pool.h  constants.h  devirtualize.h  emit_x64.cpp  emit_x64.h  emit_x64_floating_point.cpp  emit_x64_memory.cpp.inc  emit_x64_saturation.cpp  emit_x64_vector.cpp  emit_x64_vector_floating_point.cpp  exception_handler_windows.cpp  hostloc.h  perf_map.cpp  reg_alloc.cpp  stack_layout.h  xbyak.h
src/dynarmic/common/: cast_util.h  safe_ops.h  u128.h
src/dynarmic/common/fp/: fpcr.h  fpsr.h  fused.cpp  info.h  mantissa_util.h  process_nan.cpp  unpacked.cpp  unpacked.h
src/dynarmic/common/fp/op/: FPConvert.cpp  FPRecipExponent.cpp  FPRoundInt.cpp  FPToFixed.cpp
src/dynarmic/frontend/: imm.cpp  imm.h
src/dynarmic/frontend/A32/: FPSCR.h  ITState.h  PSR.h  a32_types.cpp
src/dynarmic/frontend/A32/decoder/: arm.h  asimd.h
src/dynarmic/frontend/A32/translate/: conditional_state.cpp  translate_thumb.cpp
src/dynarmic/frontend/A32/translate/impl/: a32_branch.cpp  a32_translate_impl.h  asimd_load_store_structures.cpp  asimd_misc.cpp  asimd_one_reg_modified_immediate.cpp  asimd_three_regs.cpp  asimd_two_regs_misc.cpp  asimd_two_regs_scalar.cpp  asimd_two_regs_shift.cpp  load_store.cpp  misc.cpp  status_register_access.cpp  thumb16.cpp  thumb32_data_processing_plain_binary_immediate.cpp  thumb32_load_store_dual.cpp  thumb32_load_store_multiple.cpp
src/dynarmic/frontend/A64/: a64_location_descriptor.h
src/dynarmic/frontend/A64/decoder/: a64.h
src/dynarmic/frontend/A64/translate/impl/: impl.cpp  simd_copy.cpp  simd_modified_immediate.cpp  simd_scalar_shift_by_immediate.cpp  simd_scalar_three_same.cpp  simd_shift_by_immediate.cpp
src/dynarmic/frontend/decoder/: decoder_detail.h
src/dynarmic/ir/: basic_block.cpp  basic_block.h  ir_emitter.h  microinstruction.h  opcodes.inc  opt_passes.cpp  value.cpp
src/dynarmic/mcl/: bit.hpp  function_info.hpp  integer_of_size.hpp  intrusive_list.hpp  is_instance_of_template.hpp
tests/: CMakeLists.txt  fuzz_util.cpp  print_info.cpp  test_generator.cpp
tests/A32/: fuzz_arm.cpp  fuzz_thumb.cpp  test_arm_instructions.cpp  test_coprocessor.cpp  test_svc.cpp  test_thumb_instructions.cpp
tests/A64/: a64.cpp  fibonacci.cpp  fp_min_max.cpp  fuzz_with_unicorn.cpp  misaligned_page_table.cpp  real_world.cpp  test_invalidation.cpp  testenv.h  verify_unicorn.cpp
tests/fp/: FPToFixed.cpp  mantissa_util_tests.cpp  unpacked_tests.cpp
tests/native/: preserve_xmm.cpp
tests/unicorn_emu/: a32_unicorn.cpp  a32_unicorn.h  a64_unicorn.cpp  a64_unicorn.h
